# NapCatQQ-Desktop

./: .gitignore  .gitmodules  Makefile  README.md  REDEME.md  main-dev.py  main.py  project.pro  pyproject.toml  requirements.txt  test.py  接口调试功能分析.md
.config/: dotnet-tools.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feat_report.yml
.github/workflows/: beta_release.yml  build-msi.yml  build-portable.yml  release.yml  test.yml
assets/: NapCat-Desktop.exe.manifest
docs/: ACCEPTANCE_CHECKLIST.md  AI_CHANGELOG_DESIGN.md  AI_CHANGELOG_GUIDE.md  AI_CHANGELOG_USAGE.md  CHANGELOG.md  CI_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_WORKFLOW.md  TEST_FRAMEWORK_IMPLEMENTATION.md  naming_convention.md
docs/beta_update_logs/: BETA_LOG_1.0.2.md  BETA_LOG_1.0.3.md  BETA_LOG_1.0.4.md  BETA_LOG_1.0.6.md
docs/beta_update_logs/old/: BETA_LOG_1.0.8_1.md
docs/code_style/: code_organization.md  file_naming.md  naming_conventions.md
docs/general/: general_rules.md  migration_plan.md  quick_deploy_guide.md  remote_ssh_plan.md  remote_ssh_progress.md  security_design.md  security_implementation.md
docs/release_update_logs/v1_old/: v1.0.3.md  v1.2.1.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  v1.5.3.md
docs/resources/: resource_management.md
docs/workflow/: version_control.md
script/: file.py  webhook.py
script/build_scripts/: build_icon.py  collection_filters.py  main.spec  main.wxs  main_debug.spec  prompt_remove_programdata.js  runtime_assets.py  runtime_hook_qfluent_image_utils.py
script/test/: conftest.py  test_api_debug_service.py  test_api_debug_workspace.py  test_app_path.py  test_bot_avatar.py  test_bot_card.py  test_bot_card_remove_guard.py  test_bot_config_page.py  test_bot_config_widget.py  test_bot_list_page.py  test_bot_log_page.py  test_code_editor_smooth_scroll.py  test_config_export.py  test_config_load.py  test_config_model.py  test_connect_dialogs.py  test_crash_bundle.py  test_desktop_update.py  test_downloader.py  test_email.py  test_file_and_install.py  test_generate_changelog_ai.py  test_get_version.py  test_home_notice_service.py  test_home_version_card.py  test_install_type.py  test_legacy_import.py  test_logger.py  test_main.py  test_mutex.py  test_notification_settings.py  test_operate_config.py  test_path_func.py  test_qr_code_dialog.py  test_remote_page_single_path.py  test_run_napcat.py  test_runtime_args.py  test_setup_desktop_log_page.py  test_stacked_widget.py  test_style_sheet.py  (+5 more)
script/utils/: .env.example  changelog_config.example.json  generate_changelog_ai.py  release.py  release_helpers.py  update_version.py
scripts/: build.py  dev-setup.ps1  format_code.py  quick_build.spec  verify-env.ps1
src/: main.py
src/Core/: BeginnerGuidance.py  BootWay.py  Config.py  CreateScript.py  EULA.py  GetVersion.py  NetworkFunc.py  PathFunc.py  __init__.py
src/Core/Config/: ConfigModel.py  OperateConfig.py  __init__.py  config_enum.py  enum.py
src/Core/CreateScript/: ConfigModel.py  __init__.py
src/Core/NetworkFunc/: Downloader.py  Urls.py  __init__.py
src/Core/Utils/: AddBot.py  GetVersion.py  InstallFunc.py  PathFunc.py  RunNapCat.py  __init__.py  email.py  file.py  logger.py  mutex.py  path.py  singleton.py  system.py  webhook.py  webui.py
src/Core/network/: Urls.py  __init__.py
src/Ui/: Font.py  Icon.py  StyleSheet.py  __init__.py  style_sheet.py
src/Ui/AddPage/: Add.py  AddTopCard.py  AddWidget.py  Advanced.py  BotWidget.py  Card.py  ConfigTopCard.py  Connect.py  __init__.py  add_top_card.py  add_widget.py  bot_widget.py  card.py  enum.py  msg_box.py  signal_bus.py
src/Ui/BotListPage/: BotCard.py  BotList.py  BotListWidget.py  BotTopCard.py  BotWidget.py  __init__.py  signal_bus.py
src/Ui/GuideWindow/: __init__.py  ask_page.py  finsh_page.py  guide_window.py  install_page.py  welcome_page.py
src/Ui/HomePage/: ContentTopCard.py  ContentView.py  DashboardWidget.py  DisplayView.py  Home.py  (+1 more)
src/Update/: main.py
src/core/: __init__.py  config.py  path_func.py
src/daemon/: go.mod
src/resource/: resource.qrc
src/ui/: StyleSheet.py  icon.py  style_sheet.py
tests/: README.md  __init__.py  conftest.py  test_example.py
tests/test_config/: __init__.py  test_config_enum.py  test_config_helpers.py.template  test_config_model.py.template  test_config_model_pydantic.py  test_operate_config.py
tests/test_network/: __init__.py  test_email.py  test_urls.py  test_webhook.py
tests/test_ui/: __init__.py  test_message_box.py.template
tests/test_utils/: __init__.py  test_file.py.template  test_file_ops.py  test_get_version.py  test_log_func.py  test_logger_data.py  test_logger_enum.py  test_mutex.py  test_path_func.py  test_path_logic.py  test_singleton.py  test_string_utils.py
update/: README.md  desktop_update_manifest.json
update/docs/: migration_template.md
(+560 files in other folders)
